--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
   },
   "dependencies": {
     "pinia": "^2.0.17",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "axios": "^0.27.2",
+    "connect-history-api-fallback": "^2.0.0",
+    "core-js": "^3.8.3",
+    "express": "^4.18.1",
+    "express-sslify": "^1.2.0",
+    "serve-static": "^1.15.0",
+    "vue-axios": "^3.4.1",
+    "vue-router": "^4.1.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@iconify/vue": "^3.2.1",
