--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "pinia": "^2.0.17",
-    "vue": "^3.2.37",
     "axios": "^0.27.2",
     "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "express": "^4.18.1",
     "express-sslify": "^1.2.0",
+    "pinia": "^2.0.17",
     "serve-static": "^1.15.0",
+    "socket.io-client": "^4.5.2",
+    "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.1.3",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
